@@ -1,6 +1,7 @@
 package com.startlion.startlionserver.service;
 
 import com.startlion.startlionserver.domain.entity.Interview;
+import com.startlion.startlionserver.dto.response.interview.InterviewDetailResponse;
 import com.startlion.startlionserver.dto.response.interview.InterviewResponse;
 import com.startlion.startlionserver.dto.response.interviewanswer.InterviewAnswerResponse;
 import com.startlion.startlionserver.repository.InterviewAnswerJpaRepository;
@@ -11,6 +12,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,7 +22,7 @@ public class InterviewService {
     private final InterviewJpaRepository interviewJpaRepository;
     private final InterviewAnswerJpaRepository interviewAnswerJpaRepository;
 
-    public InterviewResponse getInterviewById(Long interviewId) {
+    public InterviewDetailResponse getInterviewById(Long interviewId) {
          Interview interview = interviewJpaRepository.findById(interviewId)
                  .orElseThrow( () -> new IllegalArgumentException("해당하는 인터뷰가 없습니다."));
 
@@ -28,18 +30,21 @@ public class InterviewService {
                   .stream()
                   .map(InterviewAnswerResponse::of)
                   .toList();
-          return InterviewResponse.of(interview, interviewAnswerResponses);
+          return InterviewDetailResponse.of(interview, interviewAnswerResponses);
     }
 
-    public List<InterviewResponse> getInterviews() {
-       return interviewJpaRepository.findAll()
-                .stream()
-                .map(interview ->
-                InterviewResponse.of(interview, interviewAnswerJpaRepository.findByInterview(interview)
-                .stream()
-                .map(InterviewAnswerResponse::of)
-                .toList()))
-                .toList();
+    public List<InterviewResponse> getInterviews(String part) {
+        List<Interview> interviews;
+
+        if (part == null || part.equalsIgnoreCase("ALL")) {
+            interviews = interviewJpaRepository.findAll();
+        } else {
+            interviews = interviewJpaRepository.findByPart(part);
+        }
+
+        return interviews.stream()
+                .map(InterviewResponse::of)
+                .collect(Collectors.toList());
     }
 
     @Transactional
@@ -52,6 +57,4 @@ public class InterviewService {
         return interviewJpaRepository.findById(interviewId)
                 .orElseThrow(() -> new EntityNotFoundException("해당하는 인터뷰가 없습니다."));
     }
-
-
 }
